# reporteao

./: .gitignore  README.md  config.example.toml  flake.nix  pyproject.toml
.github/workflows/: test.yml
reporteao/: __init__.py  config.py  db.py  email.py  queue.py  routes.py  util.py
static/css/: AdminPanel.css  CrearReporte.css  main.css  menu.css
templates/: AdminPanel.html  CrearReporte.html  LogIn.html  SingUp.html  admin.html  articulo.html  base.html  crear.html  index.html  login.html  menu.html  register.html
templates/css/: LogIn-SignUp.css  base.css  login.css  main.css
templates/email/: verificacion.txt
tests/: test_agregar_usuario.py  test_init_db.py
